--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@
   }
 
   button {
-    @apply px-4 py-2 bg-indigo-200 dark:bg-indigo-700 rounded border-b-2 text-sm
+    @apply px-4 py-2 bg-indigo-200 dark:bg-indigo-700 rounded border-b-2 border-b-black/50 dark:border-b-white/50 text-sm
   }
 }
 
@@ -53,7 +53,7 @@
   }
 
   .field {
-    @apply p-2 pr-6 border rounded border-gray-100 dark:border-gray-700
+    @apply p-2 border rounded border-gray-400 dark:border-gray-600
   }
 }
 
